--- a/lang/ru.json
+++ b/lang/ru.json
@@ -570,6 +570,7 @@
 			"legality.legal.short": "Н",
 			"level": "Есть уровни",
 			"mages": "Маги",
+			"matrixMonitor": "Стостояние матрицы",
 			"max": "Максимум",
 			"mode_of_operation": "Режим",
 			"modifications": "Модификации",
@@ -1000,6 +1001,7 @@
 				"title": "Источники"
 			},
 			"gear": {
+				"add" : "Добавить новое снаряжение",
 				"title": "Снаряжение"
 			},
 			"karma" : {
@@ -1129,8 +1131,12 @@
 				"name": "Порог по умолчанию"
 			},
 			"hardDiceCap": {
-				"hint": "В обычных условиях на брсок не может приходиться более двадцати кубиков. Этот прредел нельзя преодолеть никаким сочетаниемм способностей, навыков, эффектов или доводов.<br><b>Исключение:</b> Потраченные перед проверкой очки Преимущества могут добавить кубики сверх предела.",
+				"hint": "В обычных условиях на брсок не может приходиться более двадцати кубиков. Этот прредел нельзя преодолеть никаким сочетаниемм способностей, навыков, эффектов или доводов. Исключение: Потраченные перед проверкой очки Преимущества могут добавить кубики сверх предела.",
 				"name": "Предельное количество кубиков"
+			},
+			"bleeding": {
+				"hint": "Используйте это правило для того, чтобы представить текущий урон от серьёзных повреждений. (SWC стр. 145)",
+				"name": "Кровотечение"
 			}
 		},
 		"sin": {
@@ -1407,7 +1413,6 @@
 			}
 		},
 		"EFFECT": {
-			"sensorLock": "Замечен датчиком",
 			"chilled": "Заморозка",
 			"confused": "В замешательстве",
 			"corrosive": "Разъедание",
@@ -1428,7 +1433,22 @@
 			"silent_improved": "Немота (Улучшенная)",
 			"stilled": "Усмирение",
 			"wet": "Сырость",
-			"zapped": "Электрошок"
+			"zapped": "Электрошок",
+			"sensorLock": "Замечен сенсором",
+			"cerebropathy": "Матрица: Церебропатия",
+			"cybervirus": "Матрица: Кибервирус",
+			"psychotropic": "Матрица: Психотропная обработка",
+			"bleeding": "Кровотечение",
+			"disabled": "Инвалидность",
+			"muted": "Потеря дара речи",
+			"offbalance": "Потеря равновесия",
+			"aceinthehand": "Социальный: Туз в рукаве",
+			"fishoutofwater": "Социальный: Не в своей тарелке",
+			"misdirected": "Социальный: Отвлечён",
+			"follower": "Социальный: Ведомый",
+			"smitten": "Социальный: Сражён",
+			"suckered": "Социальный: Облопошен",
+			"irradiated": "Облучение"
 		}
 	},
 	"skill": {
