Add UI error if trying to roll for a weapon without an assigned skill

--- a/lang/en.json
+++ b/lang/en.json
@@ -1409,7 +1409,8 @@
         "Target_is_not_a_life_form": "Target is not a life form.",
         "do_not_revert_damage": "Overflow into Physical monitor. Do not revert back this damage via chat button, as it won't calculate correctly.",
         "No_actor_or_tokens_selected": "Assign yourself a Player Character, or select tokens before rolling.",
-        "You_are_not_owner_of_the_tokens": "You are not owner of the selected tokens."
+        "You_are_not_owner_of_the_tokens": "You are not owner of the selected tokens.",
+        "no_weapon_skill_set": "Please edit the weapon to assign a linked skill, before rolling."
       }
     },
     "EFFECT": {
