Multiple Matrix tab Improvements (a.o. Switchable Matrix Access Levels, Major/Minor Action icons, Matrix Initiative, Actions filtered depending on A/S, adding H&S actions)

--- a/lang/en.json
+++ b/lang/en.json
@@ -565,7 +565,9 @@
       "force": "Force",
       "gender": "Gender",
       "legality.illegal.short": "I",
+      "legality.illegal.long": "Illegal",
       "legality.legal.short": "L",
+      "legality.legal.long": "Legal",
       "level": "Has levels",
       "mages": "Mages",
       "matrixMonitor": "Matrix Monitor",
@@ -608,9 +610,17 @@
       "high" : "High",
       "luxury" : "Luxury"
     },
+    "matrix": {
+      "accessLevel": {
+        "outsider": "OUTSIDER",
+        "user": "USER",
+        "admin": "ADMIN"
+      }
+    },
     "matrixaction": {
       "backdoor_entry": "Backdoor Entry",
       "brute_force": "Brute Force",
+      "calibration": "Calibration",
       "change_icon": "Change Icon",
       "check_os": "Check OS",
       "control_device": "Control Device",
@@ -618,34 +628,48 @@
       "crash_program": "Crash Program",
       "data_spike": "Dataspike",
       "disarm_data_bomb": "Disarm Data Bomb",
+      "device_lock": "Device Lock",
+      "denial_of_service": "Denial of Service",
+      "delayed_command": "Delayed Command",
       "edit_file": "Edit File",
       "encrypt_file": "Encrypt File",
       "enter_host": "Enter Host",
       "erase_matrix_signature": "Erase Matrix Sign.",
       "format_device": "Format Device",
       "full_matrix_defense": "Full Matrix Defense",
+      "garbage_in_out": "Garbage In/Garbage Out",
       "hash_check": "Hash Check",
       "hide": "Hide",
       "jack_out": "Jack Out",
       "jam_signals": "Jam Signals",
-      "jump_rigged": "Jump Into Rigged D.",
+      "jump_rigged": "Jump Into Rigged Device",
+      "known_exploit": "Known Exploit Backdoor Entry",
+      "masquerade": "Masquerade",
       "matrix_perception": "Matrix Perception",
       "matrix_search": "Matrix Search",
+      "metahuman_middle": "Metahuman in the Middle",
+      "modify_icon": "Modify Icon",
       "probe": "Probe",
+      "pop_up": "Popup",
       "reboot_device": "Reboot Device",
-      "reconfigure": "Reconf. Matrix Attr.",
+      "reconfigure": "Reconfigure Matrix Attribute",
       "send_message": "Send Message",
       "set_data_bomb": "Set Data Bomb",
       "snoop": "Snoop",
       "spoof_command": "Spoof Command",
+      "squelch": "Squelch",
+      "subvert_infrastructure": "Subvert Infrastructure",
       "switch_ifmode": "Switch Interface Mode",
       "tarpit": "Tarpit",
-      "trace_icon": "Trace Icon"
+      "threat_analysis": "Threat Analysis",
+      "trace_icon": "Trace Icon",
+      "virtual_aim": "Virtual Aim",
+      "watchdog": "Watchdog"
     },
     "matrixini": {
 			"ar": "AR",
-			"vrcold": "VR",
-			"vrhot": "VR Hot"
+			"vrcold": "VR Cold-Sim",
+			"vrhot": "VR Hot-Sim"
 	   },
     "monitor": {
 		  "matrix": "Matrix",
