Add system setting to show H&S Matrix Actions; Ordering of Matrix Actions by localized language; (#47)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1307,6 +1307,10 @@
         "hint": "Use this rule to represent ongoing damage stemming from serious injuries. (SWC p.145)",
         "name": "Bleeding"
       },
+      "hackSlashMatrix": {
+        "hint": "Enable to show Matrix Actions from the Hack & Slash rulebook on character sheets. (HS p.28)",
+        "name": "Hack & Slash Matrix Actions"
+      },
       "armorLessensDmg": {
         "hint": "Use this rule to reduce the amount of physical damage suffered. After resisting damage (from other sources than toxins or statuses), convert one box of Physical damage to Stun for every 8 full points of DR you have. (SWC p.149)",
         "name": "Armor Lessens Physical Damage"
