Fix localization of monitor DEAD and BROKEN DOWN states (#74)

--- a/lang/en.json
+++ b/lang/en.json
@@ -820,7 +820,9 @@
 		  "matrix": "Matrix",
       "physical": "Physical",
       "stun": "Stun",
-      "overflow": "Overflow"
+      "overflow": "Overflow",
+      "dead": "DEAD",
+      "broken": "BROKEN DOWN"
     },
     "mortype": {
       "adept": "Adept",
