--- a/lang/ru.json
+++ b/lang/ru.json
@@ -823,7 +823,9 @@
 			"matrix": "Матрица",
 			"physical": "Здоровье",
 			"stun": "Оглушение",
-			"overflow": "Критический"
+			"overflow": "Критический",
+			"dead": "МЁРТВ",
+			"broken": "СЛОМАНО"
 		},
 		"mortype": {
 			"adept": "Адепт",
