Add Street Weird Spirits

--- a/lang/en.json
+++ b/lang/en.json
@@ -1562,8 +1562,11 @@
       "earth": "Earth",
       "fire": "Fire",
       "kin": "Kin",
+      "water": "Water",
       "plant": "Plant",
-      "water": "Water"
+      "guardian": "Guardian",
+      "guidance": "Guidance",
+      "task": "Task"
     },
     "tradition": {
       "attribute": "Tradition Attribute"
